// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button visual snapshots > loading state matches snapshot 1`] = `
<button
  aria-busy="true"
  class="base-button"
  data-disabled="true"
  data-loading="true"
  data-size="md"
  data-variant="primary"
  disabled=""
  tabindex="0"
  type="button"
>
  Saving
</button>
`;

exports[`Button visual snapshots > primary default matches snapshot 1`] = `
<button
  class="base-button"
  data-disabled="false"
  data-loading="false"
  data-size="md"
  data-variant="primary"
  tabindex="0"
  type="button"
>
  Submit
</button>
`;

exports[`Button visual snapshots > secondary matches snapshot 1`] = `
<button
  class="base-button"
  data-disabled="false"
  data-loading="false"
  data-size="md"
  data-variant="secondary"
  tabindex="0"
  type="button"
>
  Cancel
</button>
`;
